Refactor geocode widget and add support for default, min, max value of the radius.

--- a/src/Resources/public/css/backend.css
+++ b/src/Resources/public/css/backend.css
@@ -3,6 +3,12 @@
     display: inline-block;
 }
 
+.leaflet-geocode-map {
+    width: 100%;
+    height: 50vh;
+    min-height: 400px
+}
+
 .leaflet-submit-btn {
     margin-top: 10px;
     display: block;
